# HtmlCanvasRayTracer

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  Dockerfile  Jenkinsfile  TODO.md  package-lock.json  package.json  rollup.config.mjs  web-dev-server.config.mjs
rust/: Cargo.toml
rust/src/: camera.rs  colour.rs  hittable.rs  interval.rs  lib.rs  material.rs  ray.rs  utils.rs  vec3.rs
rust/src/hittable/: hittable_list.rs  mod.rs  sphere.rs
rust/src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
rust/src/utils/: mod.rs  native_utils.rs  wasm_utils.rs
wwwroot/: .gitignore  index.html  tsconfig.json
wwwroot/css/: reset.css
wwwroot/src/: main.ts  rayTracer.ts  tsconfig.base.json  tsconfig.json
wwwroot/src/main/: main.ts  tsconfig.json
wwwroot/src/raytracer/: Camera.ts  ImageStream.ts  Ray.ts  hittable.ts  material.ts  numberUtils.ts  rayTracer.ts  vec3.ts
wwwroot/src/raytracer_rust/: index.ts  main.ts  tsconfig.json
wwwroot/src/worker/: tsconfig.json  worker.ts  workerMessageTypes.ts
wwwroot/src/workerTypes/: index.ts  rendererTypes.ts  tsconfig.json  types.d.ts
